--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KotlinPractice</string>
+    <string name="button_open">Open</string>
+    <string name="content">Main content</string>
+    <string name="button_star">You star</string>
 </resources>
