--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="item_33">Item 33</string>
     <string name="item_44">Item 44</string>
     <string name="smart">You are doing great</string>
+    <string name="timer">00:00:00</string>
+    <string name="buttonStart">Start</string>
+    <string name="textTimer">Timer</string>
 </resources>
